--- a/grub.cfg
+++ b/grub.cfg
@@ -2,6 +2,6 @@ set timeout = 0
 set default = 0
 
 menuentry "Memory Test OS" {
-    multiboot /boot/kernel.bin
+    multiboot2 /boot/kernel.bin
     boot
 }
