test 30, efi approach lol

--- a/grub.cfg
+++ b/grub.cfg
@@ -3,6 +3,6 @@ set default = 0
 set debug = all
 
 menuentry "Memory Test OS" {
-    multiboot /boot/kernel.bin
+    multiboot /EFI/BOOT/kernel.bin
     boot
 }
